[project]
name = "pytorch-fast-transformers"
version = "0.4.0"
description = "Fast Transformers for PyTorch"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE"}
dependencies = [
    "torch"
]

[build-system]
requires = ["setuptools>=42", "wheel", "torch"]
build-backend = "setuptools.build_meta"
