[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]
# requires = [
#   "setuptools==68.0.0",
#   "wheel",
#   "torch==2.0.1",
#   "torchvision==0.15.2",
#   "torchaudio==2.0.2"
# ]

[project]
name = "pytorch-fast-transformers"
version = "0.4.0"
description = "Fast Transformers for PyTorch"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE"}
# dependencies = [
#     "torch"
# ]

[tool.pip]
# extra-index-url = "https://download.pytorch.org/whl/cu118"