[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "wheel",
  "torch==$TORCH_VERSION"
]


[project]
name = "pytorch-fast-transformers"
version = "0.4.0"
description = "Fast Transformers for PyTorch"
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE"}
# dependencies = [
#     "torch"
# ]

[tool.pip]
# extra-index-url = "https://download.pytorch.org/whl/cu118"